[tool.poetry]
name = "sentinel"
version = "0.1.1"
description = "Pythonic implementation of the Sentinel Object Pattern"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
